Improved code quality:
Added the use of the custom alerts class, used generics where they where required,  improved javaDocs, used in server communication StandardCharsets.UTF_8, and corrected some re-base errors